[package]
name = "phantomtrace"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "PhantomTrace - Advanced PCI/PII data obfuscation tool for protecting sensitive information"
repository = "https://github.com/vabhishek6/PhantomTrace"
homepage = "https://github.com/vabhishek6/PhantomTrace"
keywords = ["pii", "pci", "data-protection", "privacy", "obfuscation", "phantom", "gdpr"]
categories = ["text-processing", "command-line-utilities", "cryptography"]
authors = ["vabhishek6"]
readme = "README.md"
exclude = ["examples/*", "tests/*", "docs/*"]

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "phantomtrace"
path = "src/main.rs"

[lib]
name = "phantomtrace"
path = "src/lib.rs"

[[bench]]
name = "phantom_benchmarks"
harness = false
