[package]
name = "phantomtrace"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "PhantomTrace - Advanced PCI/PII data obfuscation tool for protecting sensitive information"
repository = "https://github.com/vabhishek6/PhantomTrace"
homepage = "https://github.com/vabhishek6/PhantomTrace"
keywords = ["pii", "pci", "data-protection", "obfuscation", "gdpr"]
categories = ["text-processing", "command-line-utilities", "cryptography"]
authors = ["vabhishek6"]
readme = "README.md"
exclude = ["examples/*", "tests/*", "docs/*"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.43", features = ["derive"] }
ctrlc = "3.4.7"

[dev-dependencies]

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc"] }
anyhow = "1.0.98"

[[bin]]
name = "phantomtrace"
path = "src/main.rs"

[lib]
name = "phantomtrace"
path = "src/lib.rs"
